[package]
name = "hop-ssh"
version = "0.1.0"
edition = "2021"
description = "⚡ Blazing fast SSH host manager"
license = "MIT"
repository = "https://github.com/UltraElite90/hop-ssh"

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
